--- a/src/Organization/Organization.css
+++ b/src/Organization/Organization.css
@@ -39,7 +39,7 @@
   .welcome-admin {
     font-size: 20px;
     font-weight: bold;
-    color: #ffffff; /* Red */
+    color: #ffffff; /* White */
   }
   
   /* Roles & Permissions */
@@ -74,7 +74,7 @@
   .data-table {
     width: 100%;
     border-collapse: collapse;
-    text-align: left;
+    text-align: center;
     font-size: 14px;
   }
   
@@ -86,6 +86,8 @@
   
   .data-table td {
     padding: 10px;
+    vertical-align: middle; /* Nội dung căn giữa theo chiều dọc */
+    height: 50px; /* Cố định chiều cao của dòng */
   }
   
   .data-table .even-row {
@@ -96,24 +98,26 @@
     background-color: #ffffff;
   }
   
+  .data-table input[type="text"] {
+    width: 100%;
+    box-sizing: border-box; /* Đảm bảo padding không ảnh hưởng đến kích thước */
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 4px;
+  }
+  
+  .data-table input[type="checkbox"] {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
+  
   /* Action Buttons */
   .action-buttons {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin: 20px 0;
-  }
-
-  /*hamburger Buttents*/
-  .hamburger-icon {
-    color: white; 
-    background: none; 
-    border: none; 
-    cursor: pointer; 
-  }
-  
-  .hamburger-icon:hover {
-    opacity: 0.8; 
   }
   
   .action-button {
@@ -127,55 +131,70 @@
   }
   
   .action-button.add {
-    background-color: #4caf50; 
+    background-color: #4caf50;
     color: white;
   }
   
   .action-button.delete {
-    background-color: #e74c3c; 
+    background-color: #e74c3c;
     color: white;
   }
   
   .action-button.edit {
-    background-color: #f1c40f; 
+    background-color: #f1c40f;
     color: white;
   }
+  
   /* Sidebar */
-.w-64 {
+  .w-64 {
     width: 16rem;
   }
   
-  /* Main Content khi Sidebar mở */
   .ml-64 {
-    margin-left: 16rem; 
+    margin-left: 16rem;
   }
   
   .main-content-expanded {
-    width: calc(100% - 16rem); 
-    margin-left: 16rem; 
+    width: calc(100% - 16rem);
+    margin-left: 16rem;
   }
   
   .main-content-collapsed {
-    width: 100%; /* Khi Sidebar bị ẩn */
+    width: 100%;
     margin-left: 0;
   }
   
-  
-  /* Main Content khi Sidebar đóng */
-  .ml-0 {
-    margin-left: 0; 
-  }
-  
-  .w-full {
-    width: 100%; 
-  }
-  
-  /* Transition hiệu ứng */
   .transition-all {
     transition: all 0.3s ease;
   }
   
   .duration-300 {
     transition-duration: 300ms;
+  }
+  
+  /* Edit Buttons */
+  .edit-button,
+  .save-button,
+  .cancel-button {
+    padding: 4px 8px;
+    font-size: 14px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+  }
+  
+  .edit-button {
+    background-color: #4caf50;
+    color: white;
+  }
+  
+  .save-button {
+    background-color: #008cba;
+    color: white;
+  }
+  
+  .cancel-button {
+    background-color: #f44336;
+    color: white;
   }
   
