--- a/src/Organization/Organization.css
+++ b/src/Organization/Organization.css
@@ -13,7 +13,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1px 5px;
+    margin-top: -10px;
     background-color: #ffffff;
     border-bottom: 1px solid #ffffff;
 }
