--- a/frontend/src/Login/Login.css
+++ b/frontend/src/Login/Login.css
@@ -16,8 +16,8 @@
 }
 
 .custom-office365:hover {
-    background-color: #ff6f3b !important;
-    border-color: #ff6f3b !important; 
+    background-color: #ff8153 !important;
+    border-color: #ff8153 !important; 
 }
 
 .mt-6 {
